fix: reduce spacing in main cards

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -66,7 +66,7 @@
     box-shadow: none;
 
     > .card-header {
-      min-height: 80px;
+      min-height: 60px;
       padding: 10px auto;
       color: $gray-600;
       background-color: transparent;
